@@ -358,7 +358,7 @@ DBUser=root
 #	Shared memory size, for storing hosts and items data.
 #
 # Mandatory: no
-# Range: 128K-2G
+# Range: 128K-8G
 # Default:
 # CacheSize=8M
 
