@@ -306,7 +306,7 @@ DBUser=root
 #	Shared memory size for storing host, item and trigger data.
 #
 # Mandatory: no
-# Range: 128K-2G
+# Range: 128K-8G
 # Default:
 # CacheSize=8M
 
